--- a/zpi-assistant/package.json
+++ b/zpi-assistant/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~10.1.4",
     "bootstrap": "^4.5.3",
     "bootstrap-icons": "^1.2.2",
+    "material-design-icons": "^3.0.1",
     "ngx-bootstrap": "^6.2.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
